@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-27T02:23:47Z",
+  "timestamp" : "2022-07-27T08:29:18Z",
   "count_outdated" : 696,
   "uniques_outdated" : 361,
-  "count" : 719,
-  "uniques" : 375,
+  "count" : 722,
+  "uniques" : 377,
   "clones" : [
     {
       "timestamp": "2022-07-13T00:00:00Z",
@@ -81,6 +81,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-27T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
