@@ -1,6 +1,6 @@
 {
-  "count": 23,
-  "uniques": 4,
+  "count": 26,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-07-13T00:00:00Z",
@@ -56,6 +56,11 @@
       "timestamp": "2022-07-26T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-27T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
