@@ -1,3 +1,10 @@
+2022-07-27T08:29:18Z:
+* notice: last 14d: unq all: 5 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 361 696 / 375 719
+* notice: next accum: outdated-unq outdated-all / unq all: 361 696 / 377 722
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-07-27]
+
 2022-07-27T02:23:47Z:
 * notice: last 14d: unq all: 4 23
 * notice: prev accum: outdated-unq outdated-all / unq all: 360 694 / 374 717
